--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>Goat Meat imported directly from Nigeria.</p>
             </div>
             <div class="product">
-                <img src="style/img/Catfish.jpg" alt="Smoked Cat Fish">
+                <img src="style/img/Fish.jpg" alt="Smoked Cat Fish">
                 <h2>Smoked Cat Fish</h2>
                 <p>Price: £5.00</p>
                 <p> </p>
@@ -40,7 +40,7 @@
                 <p>Infuse your dishes with the rich, smoky essence of authentic African flavor.</p>
             </div>
             <div class="product">
-                <img src="style/img/Ponmo-Ijebu.jpg" alt="Ponmo">
+                <img src="style/img/Ponmo.jpg" alt="Ponmo">
                 <h2>Ponmo</h2>
                 <p>Price: £6.00</p>
                 <p> </p>
@@ -58,13 +58,13 @@
                 <p> </p>
             </div>
             <div class="product">
-                <img src="style/img/iru.jpg" alt="Iru(Fermented Locust Bean)">
+                <img src="style/img/iru2.jpg" alt="Iru(Fermented Locust Bean)">
                 <h2>Iru(Fermented Locust Bean)</h2>
                 <p>Price: £6.00</p>
                 <p> </p>
             </div>
             <div class="product">
-                <img src="https://example.com/suya.jpg" alt="Bean(Oloyin)">
+                <img src="style/img/Beans.jpg" alt="Bean(Oloyin)">
                 <h2>Bean(Oloyin)</h2>
                 <p>Price: £6.00</p>
                 <p> </p>
