--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <footer class="footer">
                 <p>&copy; 2024 Jora Groceries</p>
-                <p>Contact us at: <a href="mailto:jorakitchenib@gmail.com">jorakitchenib@gmail.com</a></p>
+                <p>Contact us at <a href="mailto:jorakitchenib@gmail.com">jorakitchenib@gmail.com</a> to order your ingredients today</p>
         </footer>
 
     </body>
