--- a/index.html
+++ b/index.html
@@ -30,44 +30,44 @@
             <div class="product">
                 <img src="style/img/Fish.jpg" alt="Smoked Cat Fish">
                 <h2>Smoked Cat Fish</h2>
-                <p>Price: £5.00</p>
-                <p> </p>
+                <p>Price: £5.99 for 200g</p>
+                <p>Price: £14.99 for 4Kg</p>
             </div>
             <div class="product">
                 <img src="style/img/Crayfish.jpg" alt="Dried Cray Fish">
                 <h2>Dried Cray Fish</h2>
-                <p>Price: £8.00</p>
+                <p>Price: £5.99 for 200g</p>
+                <p>Price: £14.50 for 4Kg</p>
                 <p>Infuse your dishes with the rich, smoky essence of authentic African flavor.</p>
             </div>
             <div class="product">
                 <img src="style/img/Ponmo.jpg" alt="Ponmo">
                 <h2>Ponmo</h2>
                 <p>Price: £6.00</p>
-                <p> </p>
+                <p>Price: £6.00</p>
             </div>
             <div class="product">
                 <img src="style/img/amala.jpg" alt="Elubo(Dried Yam Flour)">
                 <h2>Elubo(Dried Yam Flour)</h2>
                 <p>Price: £6.00</p>
-                <p> </p>
             </div>
             <div class="product">
                 <img src="style/img/garri.jpg" alt="Garri(Cassava Flake)">
                 <h2>Garri(Cassava Flake)</h2>
-                <p>Price: £6.00</p>
-                <p> </p>
+                <p>Price: £3.99 for 6 pieces</p>
+                <p>Price: £6.99 for 12 pieces</p>
             </div>
             <div class="product">
                 <img src="style/img/iru2.jpg" alt="Iru(Fermented Locust Bean)">
                 <h2>Iru(Fermented Locust Bean)</h2>
-                <p>Price: £6.00</p>
-                <p> </p>
+                <p>Price: £1.95 for 100g</p>
+                <p>Price: £2.95 for 200g</p>
             </div>
             <div class="product">
                 <img src="style/img/Beans.jpg" alt="Bean(Oloyin)">
                 <h2>Bean(Oloyin)</h2>
-                <p>Price: £6.00</p>
-                <p> </p>
+                <p>Price: £7.00 for 1.5Kg</p>
+                <p>Price: £14.99 for 4Kg</p>
             </div>
         </div>
 
