--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             <div class="product">
                 <img src="style/img/Ponmo.jpg" alt="Ponmo">
                 <h2>Ponmo</h2>
-                <p>Price: £6.00</p>
-                <p>Price: £6.00</p>
+                <p>Price: £4.00 for 250g</p>
             </div>
             <div class="product">
                 <img src="style/img/amala.jpg" alt="Elubo(Dried Yam Flour)">
@@ -54,8 +53,7 @@
             <div class="product">
                 <img src="style/img/garri.jpg" alt="Garri(Cassava Flake)">
                 <h2>Garri(Cassava Flake)</h2>
-                <p>Price: £3.99 for 6 pieces</p>
-                <p>Price: £6.99 for 12 pieces</p>
+                <p>Price: £3.99</p>
             </div>
             <div class="product">
                 <img src="style/img/iru2.jpg" alt="Iru(Fermented Locust Bean)">
