--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <div class="product">
                 <img src="style/img/amala.jpg" alt="Elubo(Dried Yam Flour)">
                 <h2>Elubo(Dried Yam Flour)</h2>
-                <p>Price: £6.00</p>
+                <p>Price: £4.99 for 1.5Kg</p>
             </div>
             <div class="product">
                 <img src="style/img/garri.jpg" alt="Garri(Cassava Flake)">
                 <h2>Garri(Cassava Flake)</h2>
-                <p>Price: £3.99</p>
+                <p>Price: £3.99 for 1.5Kg</p>
             </div>
             <div class="product">
                 <img src="style/img/iru2.jpg" alt="Iru(Fermented Locust Bean)">
