--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>Price: £14.99 for 4Kg</p>
             </div>
             <div class="product">
-                <img src="style/img/Crayfish.jpg" alt="Dried Cray Fish">
+                <img src="style/img/crayfish1.jpg" alt="Dried Cray Fish">
                 <h2>Dried Cray Fish</h2>
                 <p>Price: £2.45 for 40g</p>
                 <p>Price: £3.45 for 70g</p>
